# edits_as_preferences

./: .gitignore  README.md  main.py  main.sh  pyproject.toml
data/counterfact_samples/: generated_0.json  generated_1.json  generated_10.json  generated_11.json  generated_12.json  generated_13.json  generated_14.json  generated_15.json  generated_16.json  generated_17.json  generated_18.json  generated_19.json  generated_2.json  generated_20.json  generated_21.json  generated_22.json  generated_23.json  generated_24.json  generated_25.json  generated_26.json  generated_27.json  generated_28.json  generated_29.json  generated_3.json  generated_30.json  generated_31.json  generated_32.json  generated_33.json  generated_34.json  generated_35.json  generated_36.json  generated_37.json  generated_38.json  generated_39.json  generated_4.json  generated_40.json  generated_41.json  generated_42.json  generated_43.json  generated_44.json  (+60 more)
edits_as_preferences/: dataset.py  easy_edit_evaluate.py  evaluate.py
results/: performance_0.json  performance_1.json
