[tool.poetry]
name = "edits-as-preferences"
version = "0.1.0"
description = ""
authors = ["Domenic Rosati <domenicrosati@gmail.com>"]
readme = "README.md"
packages = [{include = "edits_as_preferences"}]

[tool.poetry.dependencies]
python = "^3.11"
trl = "^0.7.10"
transformers = "^4.37.2"
datasets = "^2.16.1"
scipy = "^1.12.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
